wording fixes within make a skill tree page

--- a/BlazorApp1/Pages/MakeSkillTreeV2.razor
+++ b/BlazorApp1/Pages/MakeSkillTreeV2.razor
@@ -363,7 +363,7 @@
     {
         Node node = new Node()
         {
-            ID = "branch" + NodeIndex,
+            ID = "node" + NodeIndex,
 
             // Position of the node.
             OffsetX = 250,
@@ -376,7 +376,7 @@
             {
                 new ShapeAnnotation()
                 {
-                    Content = "branch " + NodeIndex,
+                    Content = "node " + NodeIndex,
 
                     Style = new TextStyle()
                     {
