--- a/BlazorApp1/Pages/MakeSkillTreeV2.razor
+++ b/BlazorApp1/Pages/MakeSkillTreeV2.razor
@@ -582,8 +582,8 @@
 
 <style>
     .btn-group button {
-        background-color: #04AA6D; 
-        border: 1px solid green; 
+        background-color: #1b6ec2;
+        border: 1px solid black;
         color: white;
         padding: 10px 24px; 
         cursor: pointer; 
@@ -601,6 +601,6 @@
         border-right: none; 
     }
     .btn-group button:hover {
-        background-color: #3e8e41;
+        opacity: .7;
     }
 </style>
