--- a/BlazorApp1/Pages/Login.razor
+++ b/BlazorApp1/Pages/Login.razor
@@ -362,6 +362,7 @@ else
     body {
         min-height: 100vh;
         background: white;
+        background-image: url('classroomphoto.jpg');
         display: flex;
         font-family: sans-serif;
     }
@@ -372,48 +373,48 @@ else
         max-width: 90%;
     }
 
-        .container form {
-            width: 100%;
-            height: 100%;
-            padding: 20px;
-            background: white;
-            border-radius: 4px;
-            box-shadow: 0 8px 16px rgba(0,0,0);
-        }
+    .container form {
+    width: 100%;
+    height: 100%;
+    padding: 20px;
+    background: white;
+    border-radius: 4px;
+    box-shadow: 0 8px 16px rgba(0,0,0);
+    }
 
-            .container form h1 {
-                text-align: center;
-                margin-bottom: 24px;
-                color: black;
+    .container form h1 {
+    text-align: center;
+    margin-bottom: 24px;
+    color: black;
+    }
+
+    .container form .form-control {
+    width: 100%;
+    height: 40px;
+    background: white;
+    border-radius: 4px;
+    border: 1px solid silver;
+    margin: 10px 0 18px 0;
+    padding: 0 10px;
             }
 
-            .container form .form-control {
-                width: 100%;
-                height: 40px;
-                background: white;
-                border-radius: 4px;
-                border: 1px solid silver;
-                margin: 10px 0 18px 0;
-                padding: 0 10px;
-            }
+    .container form .btn {
+    margin-left: 50%;
+    transform: translateX(-50%);
+    width: 120px;
+    height: 34px;
+    border: none;
+    outline: none;
+    background: #1b6ec2;
+    cursor: pointer;
+    font-size: 16px;
+    text-transform: uppercase;
+    color: white;
+    radius: 4px;
+    transition: .3s;
+    }
 
-            .container form .btn {
-                margin-left: 50%;
-                transform: translateX(-50%);
-                width: 120px;
-                height: 34px;
-                border: none;
-                outline: none;
-                background: green;
-                cursor: pointer;
-                font-size: 16px;
-                text-transform: uppercase;
-                color: white;
-                border-radius: 4px;
-                transition: .3s;
-            }
-
-                .container form .btn:hover {
-                    opacity: .7;
-                }
+    .container form .btn:hover {
+    opacity: .7;
+    }
 </style>
