--- a/BlazorApp1/Pages/_Layout.cshtml
+++ b/BlazorApp1/Pages/_Layout.cshtml
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
     <link href="css/site.css" rel="stylesheet" />
     <link href="BlazorApp1.styles.css" rel="stylesheet" />
+    <link href="css/style.css" rel="stylesheet"/>
 
     <link href="_content/Syncfusion.Blazor.Themes/bootstrap5.css" rel="stylesheet" />
     <!--Refer theme style sheet as below if you are using Syncfusion.Blazor Single NuGet-->
