--- a/BlazorApp1/Pages/MakeSkillTreeV2.razor
+++ b/BlazorApp1/Pages/MakeSkillTreeV2.razor
@@ -611,3 +611,28 @@
         popupRef.Show(message);
     }
 }
+
+<style>
+    .btn-group button {
+        background-color: #1b6ec2;
+        border: 1px solid black;
+        color: white;
+        padding: 10px 24px;
+        cursor: pointer;
+        float: left;
+    }
+
+    .btn-group:after {
+        content: "";
+        clear: both;
+        display: table;
+    }
+
+    .btn-group button:not(:last-child) {
+        border-right: none;
+    }
+
+    .btn-group button:hover {
+        opacity: .7;
+    }
+</style>
