--- a/BlazorApp1/Pages/MakeSkillTreeV2.razor
+++ b/BlazorApp1/Pages/MakeSkillTreeV2.razor
@@ -14,7 +14,7 @@
     <button @onclick="Undo">Undo</button>
     <button @onclick="Redo">Redo</button>
     <button @onclick="Delete">Delete</button>
-    <button @onclick="Save">Save Skilltree</button>
+    <button @onclick="Save">Save</button>
     <input type="text" @bind-value="Name" placeholder="File Name" />
 </div>
 
