--- a/BlazorApp1/Pages/CreateAssignment.razor
+++ b/BlazorApp1/Pages/CreateAssignment.razor
@@ -7,12 +7,75 @@
 
 @inject IJSRuntime JS;
 
+
+
+
+
 <script suppress-error="BL9992">
    function ShowHideDiv(){
         var fileCheck = document.getElementById("fileBtn");
         var dvFile = document.getElementById("dvFile");
         dvFile.style.display = fileCheck.checked ? "block" : "none";
    }
+</script>
+
+<script suppress-error="BL9992">
+
+const dropArea = document.querySelector(".drag-area"),
+dragText = dropArea.querySelector("header"),
+button = dropArea.querySelector("button"),
+input = dropArea.querySelector("input");
+let file; 
+
+button.onclick = ()=>{
+  input.click(); 
+}
+
+input.addEventListener("change", function(){
+
+  file = this.files[0];
+  dropArea.classList.add("active");
+  showFile();
+});
+
+
+dropArea.addEventListener("dragover", (event)=>{
+  event.preventDefault();
+  dropArea.classList.add("active");
+  dragText.textContent = "Release to Upload File";
+});
+
+
+dropArea.addEventListener("dragleave", ()=>{
+  dropArea.classList.remove("active");
+  dragText.textContent = "Drag & Drop to Upload File";
+});
+
+
+dropArea.addEventListener("drop", (event)=>{
+  event.preventDefault();
+ 
+  file = event.dataTransfer.files[0];
+  showFile();
+});
+
+function showFile(){
+  let fileType = file.type; //getting selected file type
+  let validExtensions = ["image/jpeg", "image/jpg", "image/png"];
+  if(validExtensions.includes(fileType)){
+    let fileReader = new FileReader();
+    fileReader.onload = ()=>{
+      let fileURL = fileReader.result;
+      let imgTag = `<img src="${fileURL}" alt="image">`;
+      dropArea.innerHTML = imgTag;
+    }
+    fileReader.readAsDataURL(file);
+  }else{
+    alert("Invalid file type!");
+    dropArea.classList.remove("active");
+    dragText.textContent = "Drag & Drop to Upload File";
+  }
+}
 </script>
 
 <h3>CreateAssignment</h3>
@@ -50,10 +113,17 @@
 
         <div id="dvFile" style="display: none">
             <br>
-                <form>
-                    <input type="file" id="myFile" name="filename">
-                    <input type="submit" value="Submit">
-                </form>
+        
+          <div class="drag-area">
+              <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
+            <div class="icon"><i class="fas fa-cloud-upload-alt"></i></div>
+            <header>Drag & Drop to Upload File</header>
+            <span>OR</span>
+            <button>Browse File</button>
+            <input type="file" hidden>
+          </div>
+
+            <script suppress-error="BL9992" src="~/JSFolder/upload.js"></script>
                 <br> <br>
         </div>
 
@@ -208,3 +278,52 @@
         popupRef.Show(message);
     }
 }
+
+<style>
+
+.drag-area{
+  border: 2px dashed black;
+  height: 500px;
+  width: 700px;
+  border-radius: 5px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+.drag-area.active{
+  border: 2px solid black;
+}
+.drag-area .icon{
+  font-size: 100px;
+            color: black;
+}
+.drag-area header{
+  font-size: 30px;
+  font-weight: 500;
+            color: black;
+}
+.drag-area span{
+  font-size: 25px;
+  font-weight: 500;
+            color: black;
+  margin: 10px 0 15px 0;
+}
+.drag-area button{
+  padding: 10px 25px;
+  font-size: 20px;
+  font-weight: 500;
+  border: none;
+  outline: none;
+            background: black;
+  color: white;
+  border-radius: 5px;
+  cursor: pointer;
+}
+.drag-area img{
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
+  border-radius: 5px;
+}
+</style>
