--- a/BlazorApp1/Pages/Persona.razor
+++ b/BlazorApp1/Pages/Persona.razor
@@ -30,7 +30,10 @@
 </div>
 
 <div class="container">
-    @User.user.Badges
+    <!--@User.user.Badges-->
+    Badges
+    <img src="/images/achieved.png" width="17px" />
+    <img src="/images/congratulations.png" width="24px"/>
 </div>
 
 <div class="container">
